# Auxid

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
.github/: FUNDING.yml
.github/workflows/: release_windows.yml
IDE/VSCode/auxid-vscode/: auxid-vscode-0.1.0.vsix  package-lock.json  package.json
IDE/VSCode/auxid-vscode/src/: extension.ts  sidebar_provider.ts
IDE/VSCode/oxide-vscode/: package-lock.json  package.json
IDE/VSCode/oxide-vscode/src/: extension.ts  sidebar_provider.ts
Include/auxid/: auxid.hpp
Include/oxide/: oxide.hpp
Validator/: .clangd  CMakeLists.txt  CMakePresets.json  compile_commands.json
Validator/CMake/: FindDeps.cmake
Validator/Src/: CMakeLists.txt
Validator/Src/cpp/: Main.cpp  Validator.cpp
Validator/Src/cpp/Matchers/: RawTypeMatcher.cpp
Validator/Src/hpp/: PCH.hpp  Validator.hpp
Validator/cmake/: find_deps.cmake
Validator/src/: CMakeLists.txt
Validator/src/cpp/: main.cpp  raw_type_police.cpp  use_after_free.cpp  use_after_move.cpp  violation_reporter.cpp
Validator/src/hpp/: raw_type_police.hpp  use_after_free.hpp  use_after_move.hpp  violation_reporter.hpp
cmake/: auxid_setup_project.cmake
cmake/toolchains/: arm64-windows-msvc.cmake  x64-windows-msvc.cmake
include/auxid/: auxid.hpp  compiler.hpp  pch.hpp
include/auxid/containers/: hash_map.hpp  hash_set.hpp  option.hpp  pair.hpp  ring_buffer.hpp  string.hpp  vec.hpp
include/auxid/memory/: arc.hpp  box.hpp
include/auxid/std_wrappers/: filesystem.hpp  function.hpp
include/auxid/thread/: thread.hpp
include/auxid/utils/: test.hpp
libauxid/: CMakeLists.txt  build.ninja
libauxid/.auxid/: build.ninja
libauxid/include/auxid/: auxid.hpp  pch.hpp
libauxid/include/auxid/builder/: base.hpp  builder.hpp  package.hpp  target.hpp
libauxid/include/auxid/containers/: hash_base.hpp  hash_map.hpp  hash_set.hpp  option.hpp  pair.hpp  span.hpp  string.hpp  vec.hpp
libauxid/include/auxid/memory/: arena.hpp  heap.hpp
libauxid/include/auxid/thread/: thread.hpp
libauxid/src/cpp/: auxid.cpp
libauxid/src/cpp/builder/: builder.cpp  ninja_generator.cpp  target.cpp
libauxid/src/hpp/builder/: ninja_generator.hpp
src/: CMakeLists.txt
src/cpp/: auxid.cpp
tests/: CMakeLists.txt
tests/cpp/containers/: iterator_concepts.cpp
toolchain/: CMakeLists.txt
toolchain/auxid/: CMakeLists.txt
toolchain/auxid/cpp/: cli.cpp  main.cpp
toolchain/auxid/hpp/: cli.hpp
toolchain/cmake/: find_deps.cmake
toolchain/compiler/cpp/: compiler.cpp
toolchain/platform/: CMakeLists.txt
toolchain/platform/include/platform/: pch.hpp  platform.hpp
toolchain/platform/src/cpp/: platform.cpp
toolchain/workspace/: CMakeLists.txt
toolchain/workspace/include/workspace/: workspace.hpp
toolchain/workspace/src/cpp/: workspace.cpp
